--- a/4go/Makefile
+++ b/4go/Makefile
@@ -4,9 +4,11 @@ all: compile
 	
 compile:
 	go build -o 1  1hello.go     
-	go build -o 11 1var.go     
-	go build -o 2  2function.go  
-	go build -o 21 2goroutine.go     
+	go build -o 11 1var.go   
+	go build -o 12 1varlaco.go   	  
+	go build -o 2  2func.go  
+	go build -o 21 2function.go  	
+	go build -o 22 2goroutine.go     
 	go build -o 3  3channel.go  
 	go build -o 4  4channel.go  
 	go build -o 5  5vetor.go  	
