--- a/4go/Makefile
+++ b/4go/Makefile
@@ -16,7 +16,7 @@ compile:
 	go build -o 7  7vetortopo.go  
 	go build -o 8  8getruntime.go  
 	go build -o 9  9goroutine.go
-
+	go build -o 91  9keyboard.go
 
 
 clean:
